# scrapedo-scrapers

./: .gitignore  LICENSE  README.md  ubereats_store_cards.csv
AUTODOC-scraper/: README.md  scrapeProducts.py
alibaba-scraper/: README.md  scrapeAlibabaCategory.py  scrapeAlibabaProduct.py  scrapeAlibabaReviews.py
allegro-scraper/: README.md  scrapeProductInfo.py
amazon-scraper/: CONTRIBUTING.md  LICENSE  README.md  categories.py  category&SearchResults.py  multipleVariationProduct.py  package-lock.json  package.json  pyproject.toml  reviews.py  single.py  singleVariationProduct.py  sizes.py
amazon-scraper/cURL(ready-API)/: pdp.sh  search.sh  seller-offers.sh
amazon-scraper/node.js/: bestSellers.js  productVariations.js  relatedSearches.js  reviews.js  searchResults.js  sellerOffers.js  singleProduct.js  sponsoredProducts.js
amazon-scraper/output/: SDOpdp.json  SDOsearch.json  SDOsellerOffers.json  bestSellers.csv  productVariations.csv  relatedSearches.txt  reviews.csv  searchResults.csv  sellerOffers.csv  singleProduct.csv  sponsoredProducts.json
amazon-scraper/python/: bestSellers.py  productVariations.py  relatedSearches.py  reviews.py  searchResults.py  sellerOffers.py  singleProduct.py  sponsoredProducts.py
autoscout24-scraper/: README.md  scrapeCarInfo.py
bestbuy-scraper/: README.md  bestBuyScrapeDoScraper.py  bestBuySeleniumScraper.py
bing-scraper/: README.md  bingImageScraper.py  bingNewsScraper.py  bingSearchScraper.py  bingShoppingScraper.py
ebay-scraper/: README.md  (+4 more)
g2-scraper/: README.md  categories.py  main.py  pyproject.toml  reviews.py
(+129 files in other folders)
